# xppaut

./: .gitignore  HISTORY  LICENSE  Makefile  Makefile.64  Makefile.am  Makefile.avi  Makefile.lib  Makefile.nice  Makefile.old  Makefile.s2x  Makefile.w7b  README.md  abort.c  adj2.c  adj2.h  animsvgwww  aniparse.c  aniparse.h  aniparse_avi.h  aniwin.bitmap  array.bitmap  array_print.c  array_print.h  arrayplot.c  arrayplot.h  autevd.c  autevd.h  autlib2.c  autlib3.c  autlib4.c  autlib5.c  autlim.h  auto.bitmap  auto.h  auto_c.h  auto_define.h  auto_nox.c  auto_types.h  auto_x11.c  (+168 more)
betty/: Makefile.am
canonical/: 10x10.ani  10x10.ode  Makefile.am  cgl.ode  exdaebvp.ode  exdaebvp.ode~  fp.ode  gb_wnet.ode  gberg.ode  gberga.ode  gberga.ode~  huygens.ani  huygens.ode  lecar.ode  mackey.ode  qif-noise.ode  qif-noise.ode~  ratchet.ode  swindale.ode  wcfun.ode
cuda/: README  ml.c  ml_noc.ode  mlcpu.ode  mlgpu.cu  mlgpu.ode  mlgpu2.cu  mlgpueul.cu  mlgpueul.ode
cvodesrc/: Makefile.am  band.c  cvdense.c  cvspgmr.c  llnlmath.h  vector.c
doc/: Makefile.am  batch.tex  install.tex  tree.tex  xpp_doc.tex  xpp_sum.tex  xppaut.1
doc/bitmap/: dreidelbw.xbm  pg.xbm
help/: Makefile.am  keys.html  xpp3d.html  xppanim.html  xpparray.html  xppauto.html  xppbdry.html  xppbrowse.html  xppcomline.html  xppcont.html  xppdfield.html  xppdll.html  xpperase.html  xppexample.html  xppfile.html  xppgraph.html  xpphalf.html  xpphelp.html  xppics.html  xppkine.html  xppncline.html  xppnumerics.html  xppodes.html  xppopt.html  xpppara.html  xppphase.html  xpprestore.html  xppsing.html  xpptext.html  xppview.html  xppwind.html  xppxivst.html
help/odes/: bvp1.ode  dae.ode  del_log.ode  front.c  front.ode  frontx.ode  mg.ode  pp.c  ppdll.ode  ratchet.ode  schnak.ode  schnak2.ode  singint.ode  third.ode  tyson.ode  volt1.ode  volt2.ode  volt3.ode  volt4.ode  wc.ode  wcnet.ode
mkavi/: Makefile.am
ode/: 6x6.ode  Makefile.am  V0.tab  a.out  acoaster.ani  acoaster.ode  ai.ode  amari.ode  amari.ode.set  amari2.ode  amarig.ode  angela.ode  atcoaster.ani  atcoaster.ode  bnn.ode  bob.ode  cable.ode  chemo.ani  chemotax.ode  clustor.ode  coaster2D.ani  coaster2D.ode  cobweb2.ode  crazy.ode  cuplamdif.ode  cuplamdif.ode.set  cuplamdif.ode~  dae.ode  dae_ex1.ode  dae_ex2.ode  dae_ex3.ode  dde.ode  del_log.ode  delay.ode  delay.ode~  delta.ode  doubpend.ani  doubpend.ode  duck.ani  duck.ode  (+169 more)
share/: Makefile.am
src/: Makefile.am  abort.c  abort.h  adj2.c  adj2.h  alert.bitmap  aniparse.c  aniparse.h  array_print.c  array_print.h  arrayplot.c  arrayplot.h  autevd.c  autevd.h  autlib1.c  autlib2.c  autlib3.c  auto_nox.c  auto_nox.h  auto_x11.c  auto_x11.h  autpp.c  axes2.c  axes2.h  browse.c  browse.h  cabs.c  calc.c  calc.h  choice_box.c  choice_box.h  color.c  color.h  comline.c  comline.h  config.h  conpar2.c  cvode.c  d_imag.c  d_lg10.c  (+128 more)
src/auto/: Makefile.am  autlib1.c  autlib5.c  auto_c.h  auto_def2.h  conpar.c  eispack.c  fcon.h  setubv.c  worker.c
src/bitmap/: pagedn.bitmap
src/cvodesrc/: cv2.c  cv2.h  cvband.c  dense.c  iterativ.h  llnltyps.h  vector.h
tstauto/: ab.ode  bigaut.ode  bistable.ode  brper.ode  dumb.ode  dumbvp.ode  eiz-hom.ode  exp.ode  frcp.ode  lamom.ode  lamom2.ode  lo.ode  pen.ode  pf.ode  phs2.ode  phsmod.ode  phssimp.ode  pp2.ode  san.ode  she.ode  simplefold.ode  torx.ode  tsthom.ode  tsthom2.ode  tsthom3.ode  wcbiwave.ode
