AM_CFLAGS = -std=c99 -Wall -pedantic
AM_CPPFLAGS = \
	-D_XOPEN_SOURCE=600

lib_LIBRARIES = \
	libcvode.a

noinst_HEADERS = \
	band.h \
	cv2.h \
	cvband.h \
	cvdense.h \
	cvdiag.h \
	cvode.h \
	cvspgmr.h \
	dense.h \
	iterativ.h \
	llnlmath.h \
	llnltyps.h \
	spgmr.h \
	vector.h

libcvode_a_SOURCES = \
	band.c \
	cv2.c \
	cvband.c \
	cvdense.c \
	cvdiag.c \
	cvode.c \
	cvspgmr.c \
	dense.c \
	iterativ.c \
	llnlmath.c \
	spgmr.c \
	vector.c
