pkghtmldir = $(docdir)/html

nobase_dist_pkghtml_DATA = \
	keys.html \
	xpp3d.html \
	xppanim.html \
	xpparray.html \
	xppauto.html \
	xppbdry.html \
	xppbrowse.html \
	xppcomline.html \
	xppcont.html \
	xppdfield.html \
	xppdll.html \
	xpperase.html \
	xppexample.html \
	xppfile.html \
	xppgraph.html \
	xpphalf.html \
	xpphelp.html \
	xppics.html \
	xppkine.html \
	xppncline.html \
	xppnumerics.html \
	xppodes.html \
	xppopt.html \
	xpppara.html \
	xppphase.html \
	xpprestore.html \
	xppsing.html \
	xpptext.html \
	xppview.html \
	xppwind.html \
	xppxivst.html \
	odes/bvp1.ode \
	odes/dae.ode \
	odes/del_log.ode \
	odes/front.c \
	odes/front.ode \
	odes/frontx.ode \
	odes/mg.ode \
	odes/pp.c \
	odes/ppdll.ode \
	odes/ratchet.ode \
	odes/schnak2.ode \
	odes/schnak.ode \
	odes/singint.ode \
	odes/third.ode \
	odes/tyson.ode \
	odes/volt1.ode \
	odes/volt2.ode \
	odes/volt3.ode \
	odes/volt4.ode \
	odes/wcnet.ode \
	odes/wc.ode
