AM_CFLAGS = -Wall

odedir = $(docdir)/examples/ode

dist_ode_DATA = \
	6x6.ani \
	6x6.ode \
	acoaster.ani \
	acoaster.ode \
	ai.ode \
	amari2.ode \
	amarig.ode \
	amari.ode \
	amari.ode.set \
	angela.ode \
	atcoaster.ani \
	atcoaster.ode \
	bob.ode \
	borcol.ode \
	cable.ode \
	chemo.ani \
	chemotax.ode \
	clustor.ode \
	coaster2D.ani \
	coaster2D.ode \
	cobweb2.ode \
	crazy.ode \
	cuplamdif.ode \
	dae_ex1.ode \
	dae_ex2.ode \
	dae_ex3.ode \
	dae.ode \
	dde.ode \
	delay.ode \
	del_log.ode \
	delta.ode \
	doubpend.ani \
	doubpend.ode \
	duck2.ani \
	duck3.ani \
	duck.ani \
	duck.ode \
	duckx.ode \
	dumbbvp.ode \
	elaspen.ani \
	elaspen.ode \
	ev1.ode \
	evelyn.ode \
	evelyn.ode.set \
	example.c \
	fancylorenz.ode \
	fhn3d.ode \
	fhn_noise.ode \
	fhn.ode \
	fieldnoy.ode \
	fish.ani \
	forcpend.ode \
	fr.ode \
	gausvolt.ode \
	geisel.ode \
	getmax.c \
	getmin.c \
	gill_bruss.ode \
	greg.ode \
	hedge.ode \
	henhei.ode \
	hhred.ode \
	iaf.ode \
	idoubpend.ani \
	idoubpend.ode \
	ielaspen.ani \
	ielaspen.ode \
	invpend.ani \
	invpend.ode \
	itoy.ani \
	itoy.ode \
	jcoaster1.ani \
	jcoaster1.ode \
	jcoaster.ani \
	jcoaster.ode \
	jcoaster.old.ani \
	julia.ode \
	junk1.fig \
	junk2.ode \
	junk.ode \
	kepler.ode \
	koho.ode \
	kohox.ode \
	lamomeg.ode \
	lamprey.ode \
	lamvolt.ode \
	lecar.ode \
	lecar.ode.pars \
	lecar.ode.ps \
	lecar.ode.set \
	lecar.ode.svg \
	lecsimp2.ode \
	lecsimp2.ode.set \
	lin.ode \
	lin.ode.set \
	logbif.ode \
	lo.ode \
	lor2.ode \
	lorenz2.ode \
	lorenz.ani \
	lorenz.ode \
	lorknead_0.gif \
	lorknead.ode \
	minode.ode \
	ml1.ode \
	ml-range.ode \
	mlvolt.anti.set \
	mlvolt.bis.set \
	mlvolt.ode \
	myret.ode \
	nc.ani \
	nnet2.ode \
	nnet.ode \
	nochaos.ode \
	nthet.c \
	nthet.ode \
	osc1.ani \
	osc.ani \
	osc.ode \
	output.dat \
	pend2.ani \
	pend.ani \
	pend-cart1.ani \
	pend-cart1-kick.ode \
	pend-cart1.ode \
	pend.ode \
	pendx.ani \
	pendx.ode \
	phs.ode \
	pHtools_ml.ode \
	pHtools_sillen.ode \
	pHtools_simple.ode \
	pp.ode \
	r3b.ode \
	rossler.ode \
	simplecube.ode \
	sine-circel.ode \
	t.c \
	test.c \
	testdll.ode \
	test.ode \
	torus.ode \
	toy.ani \
	toy_ok.ode \
	transient.ode \
	triple.ode \
	tstar.ode \
	tstdll2.ode \
	tstdll.ode \
	tstheti.ode \
	tsthomi.ode \
	tstvol2.ode \
	tstvol3.ode \
	V0.tab \
	vanderpol.ode \
	vdp.ode \
	vlsi.ode \
	voltex1.ode \
	voltex2.ode \
	voltex3.ode \
	voltex4.ode \
	vtst.ode \
	waterwheel.ani \
	waterwheel.ode \
	wave.ani \
	wave.ode \
	wavepp.ani \
	wcring.ode \
	wcstim.ani \
	wcstim.ode \
	wta.ode

ode_PROGRAMS = \
	example.so \
	getmax.so \
	getmin.so \
	nthet.so \
	t.so

example_so_CFLAGS = -fPIC
example_so_LDFLAGS = -shared

getmax_so_CFLAGS = -fPIC
getmax_so_LDFLAGS = -shared

getmin_so_CFLAGS = -fPIC
getmin_so_LDFLAGS = -shared

nthet_so_CFLAGS = -fPIC
nthet_so_LDFLAGS = -shared

t_so_CFLAGS = -fPIC
t_so_LDFLAGS = -shared
