AM_CFLAGS = -std=c99 -Wall -pedantic
AM_CPPFLAGS = \
	-D_XOPEN_SOURCE=600 \
	-DAUTO \
	-DCVODE_YES \
	-DMYSTR1=$(MAJORVER) \
	-DMYSTR2=$(MINORVER) \
	-Icvodesrc

bin_PROGRAMS = \
	xppaut

lib_LIBRARIES = \
	libxpp.a

noinst_HEADERS = \
	abort.h \
	adj2.h \
	aniparse.h \
	arrayplot.h \
	array_print.h \
	autevd.h \
	autlim.h \
	auto_c.h \
	auto_def2.h \
	auto_f2c.h \
	auto_nox.h \
	auto_types.h \
	auto_x11.h \
	axes2.h \
	browse.h \
	calc.h \
	choice_box.h \
	color.h \
	comline.h \
	config.h \
	dae_fun.h \
	delay_handle.h \
	del_stab.h \
	derived.h \
	diagram.h \
	dialog_box.h \
	do_fit.h \
	dormpri.h \
	edit_rhs.h \
	eig_list.h \
	extra.h \
	fftn.h \
	flags.h \
	form_ode.h \
	gear.h \
	ggets.h \
	graf_par.h \
	graphics.h \
	help_defs.h \
	histogram.h \
	init_conds.h \
	integrate.h \
	kbs.h \
	kinescope.h \
	load_eqn.h \
	lunch-new.h \
	main.h \
	many_pops.h \
	markov.h \
	menudrive.h \
	menu.h \
	menus.h \
	myfonts.h \
	mykeydef.h \
	my_ps.h \
	my_rhs.h \
	my_svg.h \
	newhome.h \
	newpars.h \
	nullcline.h \
	numerics.h \
	odesol2.h \
	parserslow.h \
	pop_list.h \
	pp_shoot.h \
	read_dir.h \
	rubber.h \
	scrngif.h \
	simplenet.h \
	stiff.h \
	storage.h \
	struct.h \
	strutil.h \
	tabular.h \
	toons.h \
	torus.h \
	tutor.h \
	txtread.h \
	userbut.h \
	volterra2.h \
	xAuto.h \
	xpplim.h \
	$(bitmap_headers)

bitmap_headers = \
	bitmap/alert.bitmap \
	bitmap/aniwin.bitmap \
	bitmap/array.bitmap \
	bitmap/auto.bitmap \
	bitmap/bc.bitmap \
	bitmap/browse.bitmap \
	bitmap/delay.bitmap \
	bitmap/eqns.bitmap \
	bitmap/equilib.bitmap \
	bitmap/filebrowse.bitmap \
	bitmap/graph.bitmap \
	bitmap/home.bitmap \
	bitmap/ic.bitmap \
	bitmap/info.bitmap \
	bitmap/linedn.bitmap \
	bitmap/lines.bitmap \
	bitmap/lineup.bitmap \
	bitmap/pagedn.bitmap \
	bitmap/pageup.bitmap \
	bitmap/param.bitmap \
	bitmap/pp.bitmap \
	bitmap/start.bitmap \
	bitmap/txtview.bitmap

xppaut_LDADD = \
	cvodesrc/libcvode.a

xppaut_SOURCES = \
	abort.c \
	adj2.c \
	aniparse.c \
	arrayplot.c \
	array_print.c \
	axes2.c \
	browse.c \
	cabs.c \
	calc.c \
	choice_box.c \
	color.c \
	comline.c \
	conpar2.c \
	dae_fun.c \
	delay_handle.c \
	del_stab.c \
	derived.c \
	dialog_box.c \
	d_imag.c \
	d_lg10.c \
	do_fit.c \
	dormpri.c \
	d_sign.c \
	edit_rhs.c \
	eig_list.c \
	eispack.c \
	extra.c \
	fftn.c \
	flags.c \
	form_ode.c \
	gear.c \
	ggets.c \
	gogoauto.c \
	graf_par.c \
	graphics.c \
	histogram.c \
	i_dnnt.c \
	i_nint.c \
	init_conds.c \
	integrate.c \
	kinescope.c \
	load_eqn.c \
	lunch-new.c \
	main.c \
	many_pops.c \
	markov.c \
	menu.c \
	menudrive.c \
	menus.c \
	my_ps.c \
	my_rhs.c \
	my_svg.c \
	nullcline.c \
	numerics.c \
	odesol2.c \
	parserslow.c \
	pop_list.c \
	pow_dd.c \
	pow_di.c \
	pow_ii.c \
	pp_shoot.c \
	read_dir.c \
	r_lg10.c \
	rubber.c \
	scrngif.c \
	setubv2.c \
	simplenet.c \
	stiff.c \
	storage.c \
	tabular.c \
	torus.c \
	txtread.c \
	userbut.c \
	volterra2.c \
	worker2.c \
	z_abs.c \
	z_exp.c \
	z_log.c \
	$(strutil_sources) \
	$(auto_sources)

libxpp_a_SOURCES = \
	abort.c \
	adj2.c \
	aniparse.c \
	arrayplot.c \
	array_print.c \
	axes2.c \
	browse.c \
	cabs.c \
	calc.c \
	choice_box.c \
	color.c \
	comline.c \
	conpar2.c \
	dae_fun.c \
	delay_handle.c \
	del_stab.c \
	derived.c \
	dialog_box.c \
	d_imag.c \
	d_lg10.c \
	do_fit.c \
	dormpri.c \
	d_sign.c \
	edit_rhs.c \
	eig_list.c \
	eispack.c \
	extra.c \
	fftn.c \
	flags.c \
	form_ode.c \
	gear.c \
	ggets.c \
	gogoauto.c \
	graf_par.c \
	graphics.c \
	histogram.c \
	i_dnnt.c \
	i_nint.c \
	init_conds.c \
	integrate.c \
	kinescope.c \
	load_eqn.c \
	lunch-new.c \
	main.c \
	many_pops.c \
	markov.c \
	menu.c \
	menudrive.c \
	menus.c \
	my_ps.c \
	my_rhs.c \
	my_svg.c \
	nullcline.c \
	numerics.c \
	odesol2.c \
	parserslow.c \
	pop_list.c \
	pow_dd.c \
	pow_di.c \
	pow_ii.c \
	pp_shoot.c \
	read_dir.c \
	r_lg10.c \
	rubber.c \
	scrngif.c \
	setubv2.c \
	simplenet.c \
	stiff.c \
	storage.c \
	tabular.c \
	torus.c \
	txtread.c \
	userbut.c \
	volterra2.c \
	worker2.c \
	z_abs.c \
	z_exp.c \
	z_log.c \
	$(strutil_sources) \
	$(auto_sources)

auto_sources = \
	autlib1.c \
	autlib2.c \
	autlib3.c \
	autlib4.c \
	autlib5.c \
	autevd.c \
	autpp.c \
	diagram.c \
	auto_nox.c \
	auto_x11.c

strutil_sources = strutil.c
